--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -614,7 +614,26 @@ A_{ab}
 real odd function $\tilde{B}_o$, we obtain zero. Therefore, the $o$-th column and row is equal to zero.
 Which means, we have at least one Eigenvalue equal to zero and, therefore, the tensor
 in the product basis cannot be inverted.
- 
+
+\item The ``identity'' tensor of the form $\braket{ij|A|kl}=\delta_{ik}\delta_{jl}$ 
+cannot be inverted! 
+This can be seen from
+\begin{align}
+A_{ab}
+&= \braket{ \tilde{B}_a | A | \tilde{B}_b } \\
+&=\sum_{ijkl} \int \int \mathrm{d}\vec{r}\mathrm{d}\vec{r}' \,  \tilde{B}^*_a(\vec{r})  
+    \psi_i(\vec{r})\psi_j(\vec{r}') A_{ijkl} \psi^*_l(\vec{r}')\psi^*_k(\vec{r}) \tilde{B}_b(\vec{r}') \\
+ &=\sum_{ij} \int \int \mathrm{d}\vec{r}\mathrm{d}\vec{r}' \,  \tilde{B}^*_a(\vec{r})  
+ \psi_i(\vec{r})\psi_j(\vec{r}') \psi^*_j(\vec{r}')\psi^*_i(\vec{r}) \tilde{B}_b(\vec{r}') \\
+  &=\sum_{ij} \left(\int \mathrm{d}\vec{r} \,  \tilde{B}^*_a(\vec{r})  
+ |\psi_i(\vec{r})|^2 \right)
+ \left(\int \mathrm{d}\vec{r}' \,  \tilde{B}_b(\vec{r}')  
+ |\psi_j(\vec{r}')|^2 \right).
+\end{align}
+ If one basis function $\tilde{B}_a(\vec{r})$ is an odd function, 
+ the full column $a$ and row $a$ will be zero, so 
+ we have at least one Eigenvalue equal to zero and, therefore, the tensor
+in the product basis cannot be inverted.
 \end{itemize}
 
 
@@ -653,6 +672,14 @@ for $H^{DFT}$
 \item $v^{XC}_{mm'}(k)$: The value of the exchange-correlation potential 
 in the Wannier basis for all relevant orbitals
 \item $\Sigma^{GW}_{mm'}(k,i\omega)$: The Selfenergy within GW in the Wannier basis for all relevant orbitals on imaginary frequencies $\omega$.
+\item $V_{abcd}(q)$: The bare Coulomb interaction elements in the Wannier basis for all relevant orbitals.
+\item $P^{GW}_{abcd}(q,i\nu)$: The polarization  in the Wannier basis for all relevant orbitals on imaginary frequencies.
+\item $\Sigma^{GW,imp}_{mm'}(i\omega) = -[G^{0,loc,L}W^{0,loc,L}]_{mm'}$
+The selfenergy of the impurity model solved in GW, \textit{i.e.}
+all indices and internal transitions restricted to the correlated subspace
+\item $P^{GW,imp}_{abcd}(i\nu) = [G^{0,loc,L}G^{0,loc,L}]_{abcd}$
+The polarization of the impurity model solved in GW, \textit{i.e.}
+all indices and internal transitions restricted to the correlated subspace
 \item $\beta$: The inverse temperature used for defining $\omega_n=(2n+1)\pi/\beta$.
 \end{itemize}
 {\it All output from the GW calculation will be in atomic units and
@@ -685,11 +712,11 @@ We then proceed as follows:
 %&= \frac{1}{\pi i} \int \, \frac{\mathrm{Re}[\Sigma^{GW}_{mm'}(k,\omega)]}{\omega - i\omega_n} \ \mathrm{d}\omega .
 %\end{align}
 
-\item Calculate the local diagonal part of the GW Selfenergy ONLY for the correlated subset of orbitals $f$ that will be later replaced by the DMFT result
-\begin{align}
- \Sigma^{GW,loc}_{f}(i\omega_n)
- &= \frac{1}{N_k}\sum_k \Sigma^{GW}_{ff}(k,i\omega_n).
-\end{align}
+%\item Calculate the local diagonal part of the GW Selfenergy ONLY for the correlated subset of orbitals $f$ that will be later replaced by the DMFT result
+%\begin{align}
+% \Sigma^{GW,loc}_{f}(i\omega_n)
+% &= \frac{1}{N_k}\sum_k \Sigma^{GW}_{ff}(k,i\omega_n).
+%\end{align}
 
 
 %\item (This step can be omitted if the correct physical number of electrons $N_e$ is already known)
@@ -706,25 +733,27 @@ We then proceed as follows:
 %                \sum_{i\omega_n}\sum_{k,m}G_{0,mm}(k,i\omega_n) \mathrm{e}^{-i\omega_n\tau}.
 %\end{align}
 
-\item Make a first guess for the local impurity Selfenergy of the correlated
-orbitals $\Sigma^{imp}_{ff}$, for example one can use the GW result
+\item Make a first guess for the local DMFT impurity Selfenergy  $\Sigma^{imp}$ and polarization $P^{imp}$, for example one can use the GW result
 \begin{align}
- \Sigma^{imp}_{ff}(i\omega_n)
- &=  \Sigma^{GW,loc}_{f}(i\omega_n).
+\Sigma^{imp}(i\omega_n) &=  \Sigma^{GW,imp}(i\omega_n) \\
+P^{imp}(i\nu_n) &=  P^{GW,imp}(i\nu_n) .
 \end{align}
+Please note that $\Sigma$ is a matrix in the orbital basis and $P$ is a tensor. 
+We will work in the combined index notation to treat $P$ and all further tensors as standard matrices.
 
-\item Set up the interacting {\GF}, where the local component of the GW
-Selfenergy for the correlated orbitals $f$ is replaced by $\Sigma^{imp}$
-and the Hartree part $\Sigma^{H,imp}_f$ is substracted from $\Sigma^{imp}$. 
-In the first step when using $\Sigma^{imp}_{ff} =  \Sigma^{GW,loc}_{f}$ this 
-term is zero.
+\item Set up the interacting {\GF} $G$ and the screened interaction $W$, where the impurity component of the GW contribution for the correlated orbitals is replaced by the DMFT contribution.
+%In the first step when using $\Sigma^{imp}_{ff} =  \Sigma^{GW,loc}_{f}$ this 
+%term is zero.
 \begin{align}
- G_{mm'}(k,i\omega_n) 
+ G(k,i\omega_n) 
  &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) \right.\\
-          &- \Sigma^{GW}(k,i\omega_n) 
-          + \Sigma^{GW,loc}_f(i\omega_n)
+          & \hspace{1cm}- \Sigma^{GW}(k,i\omega_n) 
+          + \Sigma^{GW,imp}(i\omega_n)
           \left. - \Sigma^{imp}(i\omega_n)
-          + \Sigma^{H,imp}_f \right]^{-1}_{mm'}.
+           \right]^{-1} \\
+%
+W(q,i\nu_n) &= \left[ V^{-1}(q) - P^{GW}(q,i\nu_n) + P^{GW,imp}(i\nu_n) 
+                              -P^{imp}(i\nu_n)\right]^{-1}
 \end{align}
 Adjust the chemical potential $\mu$ in a way such that the desired
 filling
@@ -735,46 +764,57 @@ filling
 \end{align}
 is obtained.
 
-\item Calculate the local {\GF} (for all orbitals) then and Weiss field $\mathscr{G}$ ONLY
-on the subset of correlated orbitals $f$. Neglecting
+\item Calculate the local {\GF}  and the local screened interaction (for all orbitals) 
+\begin{align}
+ G^{loc}(i\omega_n) &= \frac{1}{N_k}\sum_k  G(k,i\omega_n) \\
+ W^{loc}(i\nu_n) &= \frac{1}{N_k}\sum_q  W(q,i\nu_n).
+\end{align}
+and then derive the Weiss field $\mathscr{G}$ and the effective interaction ONLY
+on the subset of correlated orbitals in the impurity model. Neglecting
 offdiagonal components in the hybridization we are also only interested 
-in the diagonal components of $\mathscr{G}$
+in the orbital diagonal components.
 % using the local GW Selfenergy where the diagonal components of the
 % correlated orbitals $f$ are replaced by the impurity Selfenergy
 \begin{align}
- G^{loc}_{mm'}(i\omega_n) 
- &= \frac{1}{N_k}\sum_k  G_{mm'}(k,i\omega_n) ,\\
-%
-\Rightarrow \mathscr{G}^{-1}_{ff}(i\omega_n) &= [G^{loc} ]^{-1}_{ff} (i\omega_n)
-%                 + \Sigma^{GW,loc}_{ff'}
-%                 - \Sigma^{GW,loc}_{ff}
-                + \Sigma^{imp}_{ff}(i\omega_n) .
+\mathscr{G}(i\omega_n) &= \left[ [G^{loc} ]^{-1}(i\omega_n) + \Sigma^{imp}(i\omega_n)\right]^{-1} \\
+\mathcal{U}(i\nu_n) &= \left[ [W^{loc} ]^{-1}(i\nu_n) + P^{imp}(i\nu_n)\right]^{-1}.
 \end{align}
-Here, the full $\Sigma^{imp}_{ff}$ has to be used, since 
-the Hartree part is calculated in the impurity model.
 
-The Weiss field matrix $\mathscr{G}$ is not explicitly needed, so
-we do not invert the last equation to obtain $\mathscr{G}$ .
+The Weiss field matrix $\mathscr{G}$ is not explicitly needed, so it is not necessary to
+invert the equation for $\mathscr{G}$ .
 
 \item Calculate the Hybridization function
 \begin{align}
- \Delta_{ff}(i\omega_n)
- &= i\omega_n + \tilde{\mu}_f -  \mathscr{G}^{-1}_{f	f}(i\omega_n),
+ \Delta(i\omega_n)
+ &= i\omega_n + \tilde{\mu} -  \mathscr{G}^{-1}(i\omega_n),
 \end{align}
-where the local chemical potential $\tilde{\mu}_f$ is given by
+where the local chemical potential $\tilde{\mu}$ (which is orbital dependent!) is given by 
 \begin{align}
- \tilde{\mu}_f = \lim_{\omega_n\rightarrow \infty} \mathrm{Re}\left[ \mathscr{G}^{-1}_{ff}(i\omega_n) \right]
+ \tilde{\mu} = \lim_{\omega_n\rightarrow \infty} \mathrm{Re}\left[ \mathscr{G}^{-1}(i\omega_n) \right]
 \end{align}
 and transform $\Delta(i\omega_n)$ to the imaginary time axis $\tau$ by a Fourier transform
 \begin{align}
- \Delta_{ff}(\tau) &= \frac{1}{\beta} \sum_{i\omega_n} \Delta_{ff}(i\omega_n) \mathrm{e}^{-i\omega_n\tau}
+ \Delta(\tau) &= \frac{1}{\beta} \sum_{i\omega_n} \Delta(i\omega_n) \mathrm{e}^{-i\omega_n\tau}.
+\end{align}
+Generate the $K(\tau),K'(\tau)$ functions from the retarded interaction via ($\mathcal{U}(i\nu_n)$
+is real!)
+\begin{align}
+K(\tau) &= -\frac{2}{\beta} \sum_{n>0} \frac{\mathcal{U}(i\nu_n)-\mathcal{U}(0)}{\nu^2_n}
+                                        ( \cos(\nu_n\tau)-1 ) \\
+K'(\tau) &= \frac{2}{\beta} \sum_{n>0} \frac{\mathcal{U}(i\nu_n)-\mathcal{U}(0)}{\nu_n}
+                                        \sin(\nu_n\tau),
 \end{align}
 and solve the impurity model for the correlated $f$ orbitals.
 
-\item Obtain the new local Selfenergy $\Sigma^{imp}_{ff}(i\omega_n)$ 
-from the impurity model and calculate the updated 
-Hartree correction from the impurity occupations as given by Eq. \eqref{eq:hartree_selfenergy}
-and \eqref{eq:hartree_selfenergy_freq}.
+\item Obtain the new local Selfenergy $\Sigma^{imp}(i\omega_n)$ and the
+susceptibility $\chi^{imp}_{abcd}(i\nu_n)$ from the impurity model.
+Calculate the updated impurity polarization via 
+\begin{align}
+P^{imp}(i\nu_n) &= -[\unity - \chi^{imp}(i\nu_n)\mathcal{U}(i\nu_n)]^{-1}\chi^{imp}(i\nu_n),
+\end{align}
+% and calculate the updated 
+%Hartree correction from the impurity occupations as given by Eq. \eqref{eq:hartree_selfenergy}
+%and \eqref{eq:hartree_selfenergy_freq}.
 %full {\GF}
 %\begin{align}
 % G_{mm'}(k,i\omega_n) 
@@ -791,7 +831,7 @@ and \eqref{eq:hartree_selfenergy_freq}.
 %\end{align}
 %Adjust the chemical potential $\mu$ in such a way that the number of electrons
 %$N_e$ is preserved.
-Then go back to step 3. Repeat until convergence
+Then go back to step 2. Repeat until convergence
 is reached.
 
 \end{enumerate}
